--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 Index.html 
 
 <!doctype html>
-<html lang="zh-Hans">
+<html lang="zh-Hans" data-lang="zh">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
