--- a/index.html
+++ b/index.html
@@ -78,9 +78,7 @@ Index.html
     footer{ margin-top:16px; color:var(--muted); font-size:12px; text-align:center; }
 
     /* language toggling */
-    [data-lang]{ display:none; }
-    html[data-lang="zh"] [data-lang="zh"]{ display:block; }
-    html[data-lang="en"] [data-lang="en"]{ display:block; }
+    [data-lang]{ display:block; }
 
     /* enquiry cards */
     .enqGrid{ display:grid; gap:10px; grid-template-columns:1fr 1fr; }
