remove small note

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ html
 
         <div class="divider"></div>
 
-        <h2 class="lang-zh">租房流程（给租客看很加分）</h2>
+        <h2 class="lang-zh">租房流程</h2>
         <h2 class="lang-en">Rental flow (helps tenants decide faster)</h2>
 
         <ol class="small lang-zh" style="padding-left:18px; margin:0;">
@@ -242,8 +242,6 @@ html
               <a class="btn" id="land1" target="_blank">Send (011)</a>
               <a class="btn" id="land2" target="_blank">Send (017)</a>
             </div>
-            <div class="small lang-zh">（这个入口很重要：帮你拿更多 listing）</div>
-            <div class="small lang-en">(Great for getting more landlord listings)</div>
           </div>
         </div>
 
